fix wrap text in setting box

--- a/src/DPlayer.scss
+++ b/src/DPlayer.scss
@@ -631,6 +631,7 @@
                     padding: 5px 10px;
                     box-sizing: border-box;
                     cursor: pointer;
+                    position: relative;
 
                     &:hover {
                         background-color: rgba(255,255,255,.1);
@@ -962,15 +963,18 @@
                 font-size: 13px;
                 display: inline-block;
                 vertical-align: middle;
+                white-space: nowrap;
             }
 
             .dplayer-toggle {
                 width: 32px;
-                height: 100%;
+                height: 20px;
                 text-align: center;
                 font-size: 0;
                 vertical-align: middle;
-                float: right;
+                position: absolute;
+                top: 5px;
+                right: 10px;
 
                 input {
                     max-height: 0;
